# agent-memory-bench

./: .gitignore  README.md  example_report.json  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/agent_memory_bench/: __init__.py  cli.py  config.py  core.py  models.py  runner.py
src/agent_memory_bench/adapters/: __init__.py  base.py  inmemory.py  mem0.py  memos.py  openviking.py  simplemem.py
src/agent_memory_bench/datasets/: __init__.py  contradictions.json  fact_recall.json  temporal.json
tests/: conftest.py  test_adapters.py  test_async_adapter.py  test_cli.py  test_config.py  test_core.py  test_datasets.py  test_report_formats.py  test_runner.py
