[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-bench"
version = "0.1.0"
description = "A standardized benchmark suite for evaluating and comparing agent memory systems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
mem0 = [
    "mem0ai>=1.0",
]
memos = [
    "MemoryOS>=2.0",
]

[project.scripts]
agent-memory-bench = "agent_memory_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
